# cmake_crosscompiling_template

./: .gitignore  CMakeLists.txt  README.md  main.cc  toolchain-arm.cmake
include/: CurlSender.h
src/: CurlSender.cc
